# bia-dubins-ann

./: dubins_experiment.py  dubins_experiment_2.py  experiment_reuters_mlp.py  history_visualization.py  interesting_files.txt  mappings.py
data/: generate_datasets.py
data/C/nn_dubins/vendors/opendubins/src/core/: CMakeLists.txt
data/C/nn_dubins/vendors/opendubins/src/core/include/opendubins/: angleinterval.h  arc.h  dtype.h  path.h  point.h  state.h  vector.h
data/C/nn_dubins/vendors/opendubins/src/core/src/: circle.cpp  dip.cpp  dubins.cpp  dubinsmaneuver.cpp  gdip.cpp
data/C/nn_dubins/vendors/opendubins/src/core/test/: diptest.cpp
models/: history_1464124670.p  history_1464125922.p  history_1464126156.p  history_1464128880.p  history_1464129327.p  history_1464130287.p  history_1464131632.p  history_1464132618.p  history_1464134346.p  history_1464135107.p  history_1464138092.p  history_1464164122.p  history_1464164253.p  history_1464167032.p  history_1464169601.p  history_1464171613.p  model_arch_1464126156.json  model_arch_1464128880.json  model_arch_1464129327.json  model_arch_1464132618.json  model_arch_1464134346.json  model_arch_1464135107.json  model_arch_1464164122.json  model_arch_1464164253.json  model_arch_1464167032.json  model_arch_1464171613.json  model_weights_1464124670.h5  model_weights_1464125922.h5  model_weights_1464126156.h5  model_weights_1464128880.h5  model_weights_1464129327.h5  model_weights_1464130287.h5  model_weights_1464131632.h5  model_weights_1464132618.h5  model_weights_1464134346.h5  model_weights_1464135107.h5  (+6 more)
(+88 files in other folders)
